--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^1.18.4"
   },
   "dependencies": {
-    "dotenv": "^6.1.0"
+    "dotenv": "^6.1.0",
+    "express": "^4.16.4"
   }
 }
