--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "nodemon": "^1.18.4"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^6.1.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "uuid": "^3.3.2"
   }
 }
