change to rest API

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "node-express-server",
+  "name": "node-express-server-rest-api
+  ",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
