--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "node-express-server-rest-api
-  ",
+  "name": "node-express-server-rest-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
